          31 December 2021.
        Remove code for dealing with upgrades to database schema version 10
          (which came in over a decade ago).  PLEASE NOTE that if your schema
          version is older than 10 (see the schema_info table in your database)
          then you MUST upgrade to version 10 by running wiki-toolkit-setupdb
          BEFORE you install this version of Wiki::Toolkit.

0.85    16 December 2016
        Make ->rename_node try to ensure a valid new node name (depending on
          formatter parameters).
        Add dependency on CGI which is no longer core (RT#118582)

0.84    23 February 2014
        Add new options to Lucy and Plucene backends: (1) content munging
          before search indexing, (2) total exclusion of certain nodes from
          search indexing.

0.83    22 November 2013
        Fix bug in Lucy backend (if you wrote a node Foo Bar and then one
          called Foo, it would delete Foo Bar from its index).
        Make Lucy backend capable of indexing metadata as well.
        Allow weighting of node title in Lucy search.

0.82    12 October 2013
        Fix uninitialised value warnings in Lucy backend

0.81    25 May 2013
        Fix compatibility with DBD::SQLite 1.83+ (RT#84680)
        Added a backend for searching with Lucy - Wiki::Toolkit::Search::Lucy
        Fix POD errors which are fatal with perl 5.18.

0.80    3 May 2012
        Spelling fix in Wiki::Toolkit::Search::Base
        Fixed deprecated use of foreach ... qw (fixes #53 and #54)
        Fixed bug with metadata_was in recent changes (#41).

0.79    14 August 2010
        Fix Win32 test failure http://www.cpantesters.org/cpan/report/8099980
        Declare minimum required Perl version
        (thanks to Alexandr Ciornii for the patches)

0.78    16 December 2009
        Fix various POD errors and add POD testing (#45)
        More recent changes tests (for #41)
        Fix transaction handling in SQLite backend (#49)

0.77    24 December 2008